# slicOutDoorParallelCollection.Methods

./: README.md
trunk/: Doxyfile  SGV.sln
trunk/Debug/: dos_test.bat
trunk/ProjectCode/SGVcode/: CMakeLists.txt  CUDA_Code.cpp  CUDA_Code.h  FindCuda.cmake  FindCuda2.cmake  FindCudaLibrary.cmake  SLICSuperpixels.cuda7.0.vcxproj  SLICSuperpixels.rc  SLICSuperpixels.vcxproj  SLICSuperpixels.vcxproj.filters  SLICSuperpixels.win7.vs2015.x64.opencv2413.cuda10.1.vcxproj  SLICSuperpixelsDlg.cpp  SLICSuperpixelsDlg.h  SlicKernel.cu  fuzzy.cu  main.cpp  platform_cui.h  stdafx.h
trunk/ProjectCode/SGVcode/CuiLib/: CMakeLists.txt  c_basic.h  cpp_basic.h  cpp_def.h  cpp_def_debug.h  cpp_def_type.h  cpp_general_basic.h  cpp_linux_basic.h  cpp_linux_def.h  cpp_stl.h  cpp_windows_basic.h  modules.h  opencv_basic.h  opencv_stl.h  qt_all.h  qt_basic.h
trunk/ProjectCode/SGVcode/CuiLib/ColorSpace/: CMakeLists.txt  ColorSpaceLAB.cpp  ColorSpaceLAB.h  ColorSpaceLabTable.cpp  ColorSpaceLabTable.h  DbgRangeCheck.cpp  DbgRangeCheck.h  DistanceColorSpace.cpp  DistanceColorSpace.h  ImageColorSpaceLAB.cpp  ImageColorSpaceLAB.h  ImageColorSpaceThetaML.cpp  ImageColorSpaceThetaML.h
trunk/ProjectCode/SGVcode/CuiLib/FilePathName/: CMakeLists.txt  FileNameSplit.cpp  FileNameSplit.h  PointWithDistance.cpp  PointWithDistance.h
trunk/ProjectCode/SGVcode/CuiLib/ML/Kmean/: Kmean.cpp  Kmean.h
trunk/ProjectCode/SGVcode/CuiLib/MY_SDK_LIB/: Base.cpp  Base.h  CMakeLists.txt  TimeMeasure.cpp  TimeMeasure.hpp
trunk/ProjectCode/SGVcode/CuiLib/QT_SDK_LIB/: CMD_CTRL.cpp  CMD_CTRL.hpp  CMD_CTRL_DATA.cpp  CMD_CTRL_DATA.hpp  CMD_CTRL_Q.cpp  CMD_CTRL_Q.hpp  CMakeLists.txt  IPrintQ.cpp  IPrintQ.hpp  QBase.cpp  QBase.h  QtMsgCmdQ.cpp  QtMsgCmdQ.hpp  QtTcpClientBase.cpp  QtTcpClientBase.hpp  QtTcpClientCmdCtrl.cpp  QtTcpClientCmdCtrl.hpp  QtThreadBase.cpp  QtThreadBase.hpp  QtThreadBaseCmdQ.cpp  QtThreadBaseCmdQ.hpp
trunk/ProjectCode/SGVcode/CuiLib/SGV/: CMakeLists.txt  SGV_CFG.cpp  SGV_CFG.h  SGV_CFG_ARITHMETIC.cpp  SGV_CFG_ARITHMETIC.h  SGV_CFG_DBG.cpp  SGV_CFG_DBG.h  SGV_Method.cpp  SGV_Method.h
trunk/ProjectCode/SGVcode/CuiLib/SGVcode/: CMakeLists.txt  ColorAnalyzeOnLab.cpp  ColorAnalyzeOnLab.h  ColorBarCluster.cpp  ColorBarCluster.h  ColorDef.h  ComputeSVG.cpp  ComputeSVG.h  ComputeSVG2.cpp  ComputeSVG2.h  Cui_DrawDepth.cpp  Cui_DrawDepth.h  HsHg.cpp  HsHg.h  ImageData.cpp  ImageData.h  ImageDataBasic.cpp  ImageDataBasic.h  ImageDataLABXY.cpp  ImageDataLABXY.h  ImageMemData.cpp  ImageMemData.h  ImageSaveProc.cpp  ImageSaveProc.h  ImageType.h  LabColorAnalyzeCluster _veins.cpp  LabColorAnalyzeCluster.cpp  LabColorAnalyzeCluster.h  LabColorAnalyzeCluster_veins.h  MallocCui.cpp  ManhattanHistogram.cpp  SLIC.cpp  SLIC.h  SceneDetermine.cpp  SeparateSpBlock.cpp  SeparateSpBlock.h  SpAnalyze.cpp  SpAnalyze.h  SpSetProperty.cpp  SpSetProperty.h  (+7 more)
trunk/ProjectCode/SGVcode/CuiLib/SGVcode/CuiHough/: CuiHough3.cpp  CuiHough3.h  HoughAnalyze.cpp  HoughAnalyze.h
trunk/ProjectCode/SGVcode/CuiLib/SGVcode/Harr/: CuiHarrTransformLet.cpp  CuiHarrTransformLet.h  HarrWaveletTransImg.cpp
trunk/ProjectCode/SGVcode/CuiLib/SGVcode/cfg/: cfg_def_svg.h  cui_confg_400_CUDA_ColorBar20150319.h
trunk/ProjectCode/SGVcode/CuiLib/SLIC/: CMakeLists.txt
trunk/ProjectCode/SGVcode/CuiLib/SLIC_EX/: CMakeLists.txt  SLIC_BASE.cpp  SLIC_BASE.h  SLIC_LAB.cpp  SLIC_LAB.h  SLIC_LAB_CUDA.cpp  SLIC_LAB_CUDA.h  SLIC_LAB_CUDA_INT.cpp  SLIC_LAB_CUDA_INT.h
trunk/ProjectCode/SGVcode/CuiLib/SVMcode/: TrainImgUseSvm.cpp  TrainImgUseSvm.h  TrainTreeBuilding.cpp  TrainTreeBuilding.h
trunk/ProjectCode/SGVcode/CuiLib/SVMcode/svmlight/: pr_loqo.cpp  svmlight.h
trunk/ProjectCode/SGVcode/CuiLib/cudaLib/: CMakeLists.txt  CUDA_Code.cpp  CUDA_Code.h  CUDA_Code_LAB.cpp  CUDA_Code_LAB.h  CUDA_Code_LAB_Int.cpp  CUDA_Code_LAB_Int.h  ColorSpace.cu  SlicKernel.cu  cuda_base.cu  fuzzy.cu  slicLab.cu  slicLabInt.cu
trunk/ProjectCode/SGVcode/CuiLib/tinyxml2/: CMakeLists.txt  tinyxml2.cpp
trunk/ProjectCode/SGVcode/cmake/: FindOpencv.cmake  FindQT.cmake  LinuxPrepare.cmake  SetCUDA.cmake  SetMFC.cmake
trunk/ProjectCode/SGVcode/garbage/opencv/bulid/include/opencv2/flann/: logger.h
trunk/ProjectCode/SGVcode/main.nav/: CMakeLists.txt  main_nav.cpp
trunk/ProjectCode/SGVcode/main.nav/doc/: ColorBars.md  SuperPixel.md  VerticalGround.md  fuzzy.md
trunk/ProjectCode/SGVcode/main.unit.test/: CMakeLists.txt  main_unit_test.cpp
trunk/bat_windows/: shutdown.bat
trunk/doc/: nav.dev.method.md  nav.dev.plan.md
trunk/docs/: ConfigLinuxEnv.sh  ubuntu_test.sh
