#####################################
ADD_SUBDIRECTORY(MY_SDK_LIB)
ADD_SUBDIRECTORY(tinyxml2)
ADD_SUBDIRECTORY(FilePathName)
#####################################
ADD_SUBDIRECTORY(cudaLib)
#####################################
ADD_SUBDIRECTORY(ColorSpace)
#####################################
ADD_SUBDIRECTORY(SGVcode)
ADD_SUBDIRECTORY(SGV)
#####################################
ADD_SUBDIRECTORY(ML)
ADD_SUBDIRECTORY(SVMcode)
#####################################


