#cmake最低版本需求，不加入此行会受到警告信息
CMAKE_MINIMUM_REQUIRED(VERSION 3.8.1)
###############################################################################
C11_Config()  
ConfigOpenCv()
###############################################################################
ConfigMFC_2()
###############################################################################
SET(MY_SDK_SRCS

	Base.cpp	
	TimeMeasure.cpp)
	
ADD_LIBRARY(MY_SDK_LIB   STATIC    ${MY_SDK_SRCS})
###############################################################################
	
##############################################################################

##############################################################################
