#####################################
C11_Config()
############≈‰÷√OPENCV#########################################################
ConfigOpenCv()
###############################################################################
ConfigMFC_2()
###############################################################################
SET(BASE_SRCS   
			SGV_Method.cpp
	)  
###############################################################################
SET(BASE_LINK_LIB 
			SGVBaseCode
	        SGVcode
			MY_SDK_LIB
	)
###############################################################################
ADD_LIBRARY(SGV
	  STATIC 
    ${BASE_SRCS}
	  )
###############################################################################
TARGET_LINK_LIBRARIES(SGV
	${BASE_LINK_LIB}
	)
###############################################################################