#####################################
C11_Config()
############≈‰÷√OPENCV#########################################################
ConfigOpenCv()
###############################################################################
CONFIGQT()
###############################################################################
ConfigMFC_2()
###############################################################################
SET(BASE_SRCS   
			SGV_Method.cpp
			SGV_CFG.cpp
			SGV_CFG_DBG.cpp
			SGV_CFG_ARITHMETIC.cpp
	)  
###############################################################################
SET(BASE_LINK_LIB 
			SGVBaseCode
	        SGVcode
			MY_SDK_LIB
			QT_SDK_LIB
			SLIC_EX
	)
###############################################################################
ADD_LIBRARY(SGV
	  STATIC 
    ${BASE_SRCS}
	  )
###############################################################################
TARGET_LINK_LIBRARIES(SGV
	${BASE_LINK_LIB}
	)
###############################################################################