#####################################
C11_Config()
############≈‰÷√OPENCV#########################################################
#ConfigOpenCv()
###############################################################################
ConfigMFC_2()
###############################################################################
SET(DIR_SRCS   
				SLIC.cpp
			
	)
###############################################################################	
SET(LINK_LIB 
	       
	)
 ###############################################################################	
ADD_LIBRARY(SLIC  STATIC     ${DIR_SRCS}  )
TARGET_LINK_LIBRARIES(SLIC 	 ${LINK_LIB})
##############################################################################