#####################################
C11_Config()
############≈‰÷√OPENCV#########################################################
ConfigOpenCv()
###############################################################################
ConfigMFC_2()
###############################################################################
SET(DIR_SRCS   
				SLIC_LAB.cpp
				SLIC_BASE.cpp
				SLIC_LAB_CUDA.cpp
				SLIC_LAB_CUDA_INT.cpp
			
	)
###############################################################################	
SET(LINK_LIB 
	       ColorSpace
		   cudaLib
	)
###############################################################################	
ADD_LIBRARY(SLIC_EX  STATIC     ${DIR_SRCS}  )
TARGET_LINK_LIBRARIES(SLIC_EX 	 ${LINK_LIB})
##############################################################################